# Excellent

./: .gitignore  Excellent-sidebar.spec  Excellent-topbar.spec  README.md  backend.py  fromqr.py  frontend-sidebar.py  frontend-topbar.py  frontend.py  invoices.py  locales.py  requirements.txt
Database/: exchange_rates.db  gelir.db  genel_gider.db  gider.db  history.db  settings.db
PythonFiles/: backend.py  fromqr.py  frontend-sidebar.py  frontend-topbar.py  invoices.py  toexcel.py
rust_db/: Cargo.toml
rust_db/src/: lib.rs
rust_qr/: Cargo.toml  pyproject.toml
rust_qr/src/: lib.rs
